--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@
                 <div class="product-card" data-id="12" data-category="rosas">
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
-                        <img src="/images/ramo-alejandra.jpg" alt="Ramo Alejandra">
+                        <img src="/images/ramo-alejandra.png" alt="Ramo Alejandra">
                     </div>
                     <div class="product-info">
                         <h3>Ramo Alejandra</h3>
@@ -1597,7 +1597,7 @@
                 <div class="product-card" data-id="13" data-category="rosas">
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
-                        <img src="/images/ramo-consuelo.jpg" alt="Ramo Consuelo">
+                        <img src="/images/ramo-consuelo.png" alt="Ramo Consuelo">
                     </div>
                     <div class="product-info">
                         <h3>Ramo Consuelo</h3>
