--- a/index.html
+++ b/index.html
@@ -1503,17 +1503,18 @@
                     </div>
                 </div>
                 
-                <!-- Ramo Pink -->
+                <!-- Ramo Spider-Man -->
                 <div class="product-card" data-id="8" data-category="rosas">
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
-                        <img src="/images/ramo-pink.jpg" alt="Ramo Pink">
+                        <img src="/images/ramo-spider-man.jpg" alt="Ramo SpiderMan">
                     </div>
                     <div class="product-info">
-                        <h3>Ramo Pink</h3>
-                        <p>50 Rosas</p>
+                        <h3>Ramo SpiderMan</h3>
+                        <p>14 Rosas y ojos de
+Spider-Man</p>
                         <div class="product-price">
-                            <span class="price">$750</span>
+                            <span class="price">$350</span>
                             <div class="add-to-cart">
                                 <i class="fas fa-shopping-cart"></i>
                             </div>
