--- a/index.html
+++ b/index.html
@@ -112,15 +112,14 @@
             font-size: 1.1rem;
         }
         
-        /* Header */
-        header {
-            background-color: var(--light);
-            box-shadow: 0 3px 20px rgba(0,0,0,0.08);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            padding: 15px 0;
-        }
+      header {
+    background-color: #8B4513; /* marron floral */
+    padding: 20px 0;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    color: #fff; /* Asegura que el texto sea blanco para contraste */
+}
         
         .header-container {
             display: flex;
