--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         }
         
       header {
-    background-color: #333333; /* Gris oscuro */
+    background-color: #f8f5f0; /* Gris oscuro */
     padding: 20px 0;
     position: sticky;
     top: 0;
