--- a/index.html
+++ b/index.html
@@ -114,16 +114,15 @@
             margin: 0 auto;
             font-size: 1.1rem;
         }
-        
-        /* Header */
-        header {
-            background-color: var(--candy-floss); /* Fondo principal */
-            box-shadow: 0 3px 20px rgba(0,0,0,0.08);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            padding: 15px 0;
-        }
+        /*header*/
+       header {
+    background-color: #333333; /* Gris oscuro */
+    padding: 20px 0;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    color: #fff; /* Asegura que el texto sea blanco para contraste */
+}
         
         .header-container {
             display: flex;
