--- a/index.html
+++ b/index.html
@@ -1904,7 +1904,7 @@ Spider-Man</p>
                         </div>
                         <div class="contact-text">
                             <h4>Email</h4>
-                            <p>floristeria_castirales@example.com</p>
+                            <p>floristeriacastirales@gmail.com</p>
                         </div>
                     </div>
                     
