--- a/index.html
+++ b/index.html
@@ -1921,14 +1921,15 @@ Spider-Man</p>
                     <h3 style="margin-top: 40px;">Horario de atención</h3>
                     <ul class="hours-list">
                         <li><span>Lunes a Viernes:</span> <span>9:00 - 20:00</span></li>
-                        <li><span>Sábados:</span> <span>10:00 - 18:00</span></li>
-                        <li><span>Domingos:</span> <span>11:00 - 14:00</span></li>
+                        <li><span>Sábados:</span> <span>9:00 - 20:00</span></li>
+                        <li><span>Domingos:</span> <span>CERRADO</span></li>
                     </ul>
                     
                     <h3 style="margin-top: 40px;">Síguenos</h3>
                     <div class="social-links">
                         <a href="https://www.instagram.com/floristeria_castirales/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/floristeria.castirales/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.tiktok.com/@floristeria.casti" target="_blank"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
