--- a/index.html
+++ b/index.html
@@ -1908,15 +1908,15 @@ Spider-Man</p>
                         </div>
                     </div>
                     
-                    <div class="contact-detail">
-                        <div class="contact-icon">
-                            <i class="fas fa-map-marker-alt"></i>
-                        </div>
-                        <div class="contact-text">
-                            <h4>Dirección</h4>
-                            <p>Calle Flores, 123, Local 5, Ciudad Jardín</p>
-                        </div>
-                    </div>
+             <div class="contact-detail">
+    <div class="contact-icon">
+        <i class="fas fa-truck"></i>
+    </div>
+    <div class="contact-text">
+        <h4>Envíos</h4>
+        <p>Entregas a domicilio en toda la ciudad</p>
+    </div>
+</div>
                     
                     <h3 style="margin-top: 40px;">Horario de atención</h3>
                     <ul class="hours-list">
