--- a/index.html
+++ b/index.html
@@ -1960,9 +1960,26 @@ Spider-Man</p>
                         </div>
                     </div>
                 </div>
+<!-- Ramo Pink -->
+                <div class="product-card" data-id="25" data-category="especiales">
+                    <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
+                    <div class="product-img">
+                        <img src="/images/ramo-pink.jpg" alt="Ramo Pink">
+                    </div>
+                    <div class="product-info">
+                        <h3>Ramo Pink</h3>
+                        <p>Minimalismo sofisticado: 50 rosas frescas en tonos rosados de presentación impecable.</p>
+                        <div class="product-price">
+                            <span class="price">$750</span>
+                            <div class="add-to-cart">
+                                <i class="fas fa-shopping-cart"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <!-- Arreglo Aurea -->
-                <div class="product-card" data-id="25" data-category="especiales">
+                <div class="product-card" data-id="26" data-category="especiales">
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
                         <img src="/images/arreglo-aurea.jpg" alt="Arreglo Aurea">
