--- a/index.html
+++ b/index.html
@@ -1578,6 +1578,7 @@ footer h2, footer h3, footer h4, footer h5, footer h6,
                 <button class="filter-btn" data-filter="rosas">Rosas</button>
                 <button class="filter-btn" data-filter="gerberas">Gerberas</button>
                 <button class="filter-btn" data-filter="cajas">Cajas</button>
+                <button class="filter-btn" data-filter="girasoles">Girasoles</button>
                 <button class="filter-btn" data-filter="especiales">Especiales</button>
             </div>
             
@@ -2106,7 +2107,7 @@ Spider-Man</p>
                 </div>
 
                 <!-- Ramo Lizi(antes Romi) -->
-                <div class="product-card" data-id="33" data-category="especiales">
+                <div class="product-card" data-id="33" data-category="girasoles">
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
                         <img src="/images/ramo-romi.jpg" alt="Ramo Lizi">
