--- a/index.html
+++ b/index.html
@@ -2107,7 +2107,8 @@ Spider-Man</p>
                 </div>
 
                 <!-- Ramo Lizi(antes Romi) -->
-                <div class="product-card" data-id="33" data-category="girasoles">
+                <div class="product-card" data-id="33" data-category="girasoles">   
+                <div class="product-card" data-id="33" data-category="cajas">  
                     <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
                     <div class="product-img">
                         <img src="/images/ramo-romi.jpg" alt="Ramo Lizi">
