--- a/index.html
+++ b/index.html
@@ -1666,7 +1666,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="25">
+</div><div class="product-card" data-category="rosas" data-id="25">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Pink" loading="lazy" src="/images/ramo-pink.jpg"/>
@@ -1771,7 +1771,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="26">
+</div><div class="product-card" data-category="gerberas" data-id="26">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Andrea" loading="lazy" src="/images/ramo-andrea.jpg"/>
@@ -1786,7 +1786,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="23">
+</div><div class="product-card" data-category="gerberas" data-id="23">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Carla" loading="lazy" src="/images/ramo-carla.jpg"/>
@@ -1801,7 +1801,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="30">
+</div><div class="product-card" data-category="girasoles" data-id="30">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Eva" loading="lazy" src="/images/ramo-eva.jpg"/>
@@ -1816,7 +1816,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="31">
+</div><div class="product-card" data-category="girasoles" data-id="31">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Elena" loading="lazy" src="/images/ramo-elena.jpg"/>
@@ -1831,7 +1831,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="32">
+</div><div class="product-card" data-category="girasoles" data-id="32">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Esther" loading="lazy" src="/images/regalo-estela.png"/>
@@ -1861,7 +1861,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 </div>
 </div>
-</div><div class="product-card" data-category="especiales" data-id="35">
+</div><div class="product-card" data-category="rosas" data-id="35">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
 <img alt="Ramo Barbie" loading="lazy" src="/images/ramo-barbie.jpg"/>
