--- a/index.html
+++ b/index.html
@@ -1714,7 +1714,7 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div><div class="product-card" data-category="rosas" data-id="12">
 <button class="quick-view"><i class="fas fa-eye"></i> Vista rápida</button>
 <div class="product-img">
-<img alt="Ramo Alejandra" loading="lazy" src="/images/ramo-alejandra.png"/>
+<img alt="Ramo Alejandra" loading="lazy" src="/images/ramo-alejandra.jpg"/>
 </div>
 <div class="product-info">
 <h3>Ramo Alejandra</h3>
