--- a/index.html
+++ b/index.html
@@ -1733,9 +1733,9 @@ footer mark, footer .highlight, footer .tag-highlight {
 </div>
 <div class="product-info">
 <h3>Ramo Abril</h3>
-<p>Ramo de 50 Rosas con una Mariposa</p>
+<p>Ramo de 50 Rosas con una Corona</p>
 <div class="product-price">
-<span class="price">$750</span>
+<span class="price">$760</span>
 <div class="add-to-cart">
 <i class="fas fa-shopping-cart"></i>
 </div>
