--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="es">
 <head>
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="images/favicon.png">
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Castirales Floristería | Flores Exclusivas y Arreglos Elegantes</title>
