--- a/index.html
+++ b/index.html
@@ -3465,7 +3465,74 @@ if (typeof updateCart === 'function') {
   .bot-input { flex:1; padding:8px 10px; border-radius:8px; border:1px solid #ddd; outline:none; }
   .bot-footer button.send { background:var(--accent); color: var(--dark); border:none; padding:8px 12px; border-radius:8px; cursor:pointer; }
   @media (max-width:420px){ .bot-panel{ width:92vw; height:70vh } }
-  </style>
+  
+
+/* ===== CHANGES ADDED: Fix header alignment and floating buttons on mobile ===== */
+/* ===== Corregir header para móviles: mantener todo en una sola línea ===== */
+@media (max-width: 768px) {
+  /* Forzar fila y centrado */
+  .header-container {
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    gap: 12px;
+    padding: 8px 0;
+  }
+
+  /* Logo: que no se rompa y se centre verticalmente */
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+  }
+  .logo-img { width: 56px; height: 56px; }
+
+  /* Nombre y tagline: reducir tamaño para caber mejor */
+  .logo-text .brand { font-size: 1.15rem; line-height: 1; }
+  .logo-text .tagline { font-size: 0.7rem; letter-spacing: 1.5px; }
+
+  /* Mostrar solo el botón hamburguesa (ocultar nav) */
+  nav { display: none !important; }
+  .nav-toggle { display: block !important; margin-left: 8px; }
+
+  /* Acciones (carrito, etc.) alineadas a la derecha */
+  .header-actions {
+    display: flex !important;
+    align-items: center !important;
+    gap: 10px !important;
+    margin-left: 8px;
+  }
+
+  /* Asegurar targets táctiles cómodos */
+  .nav-toggle, .cart-icon { min-width: 48px; min-height: 48px; padding: 8px; border-radius: 8px; }
+
+  /* Evitar que el header crezca demasiado */
+  header { padding: 8px 0 !important; }
+}
+
+/* ===== Forzar visibilidad y orden vertical de botones flotantes en móvil ===== */
+.whatsapp-button, .floating-cart, .bot-wrap {
+  right: 18px !important;
+  visibility: visible !important;
+  transform: none !important;
+  -webkit-transform: none !important;
+  box-shadow: 0 8px 26px rgba(0,0,0,0.12) !important;
+}
+
+/* Posicionamiento vertical (apilar sin que se oculten) */
+.whatsapp-button { bottom: 30px !important; z-index: 99998 !important; }
+.floating-cart { bottom: 110px !important; z-index: 99997 !important; }
+.bot-wrap { bottom: 190px !important; z-index: 99999 !important; }
+
+/* Ajuste fino para pantallas muy pequeñas */
+@media (max-width: 420px) {
+  .whatsapp-button, .floating-cart, .bot-wrap { right: 12px !important; }
+  .whatsapp-button { bottom: 22px !important; width: 60px !important; height: 60px !important; }
+  .floating-cart, .bot-wrap { width: 60px !important; height: 60px !important; }
+}
+
+</style>
 <div aria-live="polite" class="bot-wrap" id="botWrap">
 <div style="display:flex; gap:10px; align-items:flex-end;">
 <button aria-label="Abrir chat" class="bot-toggle" id="botToggle" title="Abrir chat">
@@ -3679,5 +3746,19 @@ botInput.addEventListener('keypress', function(e){
   </script>
 <script>
 </script>
+
+
+<!-- ===== CHANGES ADDED: Ensure floating buttons visible on load ===== -->
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.whatsapp-button, .floating-cart, .bot-wrap').forEach(function(el){
+      if (!el) return;
+      el.style.right = '18px';
+      el.style.transform = 'none';
+      el.style.visibility = 'visible';
+    });
+  });
+</script>
+
 </body>
 </html>
