--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,59 @@ footer mark, footer .highlight, footer .tag-highlight {
 <meta content="index, follow" name="robots"/>
 <link href="/sitemap.xml" rel="sitemap"/>
 </link>
+
+<style>
+
+/* ===== ADDED: Stronger floating action styles (ensure visible and inside viewport) ===== */
+.floating-action, .whatsapp-button, .floating-cart, .bot-wrap {
+  position: fixed !important;
+  right: 12px !important;
+  box-sizing: border-box !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 64px !important;
+  height: 64px !important;
+  border-radius: 50% !important;
+  color: #fff !important;
+  box-shadow: 0 8px 26px rgba(0,0,0,0.12) !important;
+  transform: none !important;
+  -webkit-transform: none !important;
+  visibility: visible !important;
+  z-index: 2147483647 !important; /* max z-index to ensure top */
+  overflow: visible !important;
+  transition: right 0.18s ease, bottom 0.18s ease, opacity 0.12s ease;
+  cursor: pointer !important;
+  border: none !important;
+  padding: 0 !important;
+}
+
+/* Individual colors for clarity (override if you prefer other colors) */
+.whatsapp-button { background: #25D366 !important; bottom: 20px !important; }
+.floating-cart { background: #ffa8c5 !important; bottom: calc(20px + 76px) !important; }
+.bot-wrap { background: #ff90a3 !important; bottom: calc(20px + 152px) !important; }
+
+/* Smaller mobiles */
+@media (max-width: 420px) {
+  .floating-action, .whatsapp-button, .floating-cart, .bot-wrap {
+    width: 56px !important;
+    height: 56px !important;
+    right: 10px !important;
+  }
+  .floating-cart { bottom: calc(16px + 64px) !important; }
+  .bot-wrap { bottom: calc(16px + 128px) !important; }
+}
+
+/* If icons inside are too large, scale them down */
+.whatsapp-button img, .floating-cart img, .bot-wrap img, .floating-action img {
+  max-width: 60% !important;
+  max-height: 60% !important;
+}
+
+/* Safety: prevent parent overflow from hiding them */
+html, body { overflow-x: visible !important; }
+
+</style>
 </head>
 <body>
 <a class="whatsapp-button" href="https://wa.me/522213387157">
@@ -3465,7 +3518,74 @@ if (typeof updateCart === 'function') {
   .bot-input { flex:1; padding:8px 10px; border-radius:8px; border:1px solid #ddd; outline:none; }
   .bot-footer button.send { background:var(--accent); color: var(--dark); border:none; padding:8px 12px; border-radius:8px; cursor:pointer; }
   @media (max-width:420px){ .bot-panel{ width:92vw; height:70vh } }
-  </style>
+  
+
+/* ===== CHANGES ADDED: Fix header alignment and floating buttons on mobile ===== */
+/* ===== Corregir header para móviles: mantener todo en una sola línea ===== */
+@media (max-width: 768px) {
+  /* Forzar fila y centrado */
+  .header-container {
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    align-items: center !important;
+    gap: 12px;
+    padding: 8px 0;
+  }
+
+  /* Logo: que no se rompa y se centre verticalmente */
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+  }
+  .logo-img { width: 56px; height: 56px; }
+
+  /* Nombre y tagline: reducir tamaño para caber mejor */
+  .logo-text .brand { font-size: 1.15rem; line-height: 1; }
+  .logo-text .tagline { font-size: 0.7rem; letter-spacing: 1.5px; }
+
+  /* Mostrar solo el botón hamburguesa (ocultar nav) */
+  nav { display: none !important; }
+  .nav-toggle { display: block !important; margin-left: 8px; }
+
+  /* Acciones (carrito, etc.) alineadas a la derecha */
+  .header-actions {
+    display: flex !important;
+    align-items: center !important;
+    gap: 10px !important;
+    margin-left: 8px;
+  }
+
+  /* Asegurar targets táctiles cómodos */
+  .nav-toggle, .cart-icon { min-width: 48px; min-height: 48px; padding: 8px; border-radius: 8px; }
+
+  /* Evitar que el header crezca demasiado */
+  header { padding: 8px 0 !important; }
+}
+
+/* ===== Forzar visibilidad y orden vertical de botones flotantes en móvil ===== */
+.whatsapp-button, .floating-cart, .bot-wrap {
+  right: 18px !important;
+  visibility: visible !important;
+  transform: none !important;
+  -webkit-transform: none !important;
+  box-shadow: 0 8px 26px rgba(0,0,0,0.12) !important;
+}
+
+/* Posicionamiento vertical (apilar sin que se oculten) */
+.whatsapp-button { bottom: 30px !important; z-index: 99998 !important; }
+.floating-cart { bottom: 110px !important; z-index: 99997 !important; }
+.bot-wrap { bottom: 190px !important; z-index: 99999 !important; }
+
+/* Ajuste fino para pantallas muy pequeñas */
+@media (max-width: 420px) {
+  .whatsapp-button, .floating-cart, .bot-wrap { right: 12px !important; }
+  .whatsapp-button { bottom: 22px !important; width: 60px !important; height: 60px !important; }
+  .floating-cart, .bot-wrap { width: 60px !important; height: 60px !important; }
+}
+
+</style>
 <div aria-live="polite" class="bot-wrap" id="botWrap">
 <div style="display:flex; gap:10px; align-items:flex-end;">
 <button aria-label="Abrir chat" class="bot-toggle" id="botToggle" title="Abrir chat">
@@ -3679,5 +3799,62 @@ botInput.addEventListener('keypress', function(e){
   </script>
 <script>
 </script>
+
+
+<!-- ===== CHANGES ADDED: Ensure floating buttons visible on load ===== -->
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    document.querySelectorAll('.whatsapp-button, .floating-cart, .bot-wrap').forEach(function(el){
+      if (!el) return;
+      el.style.right = '18px';
+      el.style.transform = 'none';
+      el.style.visibility = 'visible';
+    });
+  });
+</script>
+
+
+
+<!-- ===== ADDED: forceMoveFloatingButtonsToBody - ensure floating buttons are in body and fixed ===== -->
+<script>
+(function(){
+  function ensureFloatingButtons() {
+    var selectors = ['.whatsapp-button', '.floating-cart', '.bot-wrap', '.floating-action'];
+    selectors.forEach(function(sel) {
+      var el = document.querySelector(sel);
+      if (!el) return;
+      try {
+        // move element to body so it's not affected by transformed ancestors
+        if (el.parentElement !== document.body) {
+          document.body.appendChild(el);
+        }
+        // enforce fixed positioning and visible offsets
+        el.style.position = 'fixed';
+        el.style.right = '12px';
+        el.style.transform = 'none';
+        el.style.visibility = 'visible';
+        el.style.boxSizing = 'border-box';
+        el.style.zIndex = '2147483647';
+        // ensure touch targets
+        el.style.minWidth = '44px';
+        el.style.minHeight = '44px';
+      } catch(e) { console.warn('floating-button adjust failed', e); }
+    });
+  }
+
+  // Run on load and also a bit later in case scripts dynamically re-add/modify buttons
+  document.addEventListener('DOMContentLoaded', function(){ ensureFloatingButtons(); });
+  window.addEventListener('load', function(){ setTimeout(ensureFloatingButtons, 250); });
+  // Also observe DOM mutations to reapply if needed
+  try {
+    var obs = new MutationObserver(function(m){
+      ensureFloatingButtons();
+    });
+    obs.observe(document.documentElement || document.body, { childList:true, subtree:true });
+  } catch(e){ /* ignore on old browsers */ }
+})();
+</script>
+<!-- ===== end forceMoveFloatingButtonsToBody ===== -->
+
 </body>
 </html>
